<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Remote</string>
    <string name="Power">Power</string>
    <string name="VOL1">VOL+</string>
    <string name="VOL2">VOL-</string>
    <string name="CH1">CH+</string>
    <string name="CH2">CH-</string>
    <string name="B1">1</string>
    <string name="B2">2</string>
    <string name="B3">3</string>
    <string name="B4">4</string>
    <string name="B5">5</string>
    <string name="B6">6</string>
    <string name="B7">7</string>
    <string name="B8">8</string>
    <string name="B9">9</string>
    <string name="B0">0</string>
    <string name="menu_tv">tvtime</string>
    <string name="config">Settings</string>
    <string name="network_settings">Network settings</string>
    <string name="port_setting">Port Setting</string>
    <string name="titel_ip">IP Adress Host</string>
    <string name="desc_ip">Enter IP Adress</string>
    <string name="ip_setting">Host</string>
    <string name="set_preferences">Settings</string>
    <string name="desc_port">Port Adress of Server</string>
    <string name="titel_port">Server Port</string>
</resources>